--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="157dp"
+        android:layout_marginTop="185dp"
         android:text="@string/button_name"
         tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="83dp" />
@@ -28,4 +28,15 @@
         android:layout_marginTop="103dp"
         android:ems="10"
         android:inputType="textPersonName" />
+
+
+    <com.wafflecopter.charcounttextview.CharCountTextView
+        android:layout_width="wrap_content"
+        android:id="@+id/tvTextCounter"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/edTweet"
+        android:layout_below="@+id/edTweet"
+        app:maxCharacters="140" />
+        <!--app:exceededTextColor="#FF0000"-->
+
 </RelativeLayout>
