Updated theme for twitter likness and added Splash Screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,8 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
+        <item name="colorPrimary">#00aced</item>
+        <item name="colorPrimaryDark">#0084b4</item>
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
